# r0

./: .gitignore  CUBECL_NOTES.md  Cargo.toml  DESIGN.md  README.md
crates/r0-cube/: Cargo.toml  DESIGN.md  README.md
crates/r0-cube/src/: device.rs  exec.rs  lib.rs  monoid.rs  recipe.rs  scan.rs
crates/r0-cube/tests/: array16_spike.rs  cubetype_mut_spike.rs  exec_smoke.rs  scan_smoke.rs
crates/r0-field/: Cargo.toml  README.md
crates/r0-field/src/: baby_bear.rs  device.rs  ext.rs  ext4.rs  ext5.rs  koala_bear.rs  lib.rs  monty.rs
crates/r0-field/tests/: cube_smoke.rs  ext_cube_smoke.rs  ext_p3_oracle.rs  p3_oracle.rs
crates/r0-ntt/: Cargo.toml  README.md
crates/r0-ntt-web/: Cargo.toml  README.md  Trunk.toml  index.html
crates/r0-ntt-web/src/: lib.rs
crates/r0-ntt/benches/: forward_2pow20.rs  forward_2pow20_cuda.rs  forward_2pow20_cuda_batched.rs  forward_2pow20_cuda_split.rs  ntt.rs
crates/r0-ntt/src/: exec.rs  fwd_pass.rs  inv_pass.rs  lib.rs  monolithic.rs  pass.rs  pass_common.rs  plan.rs  planner.rs  twiddles.rs  two_pass.rs
crates/r0-ntt/tests/: autotune.rs  diagnostics.rs  ext_ntt_smoke.rs  p3_oracle.rs  planner_api.rs  two_pass.rs
crates/r0-polynomial/: Cargo.toml  DESIGN.md  README.md
crates/r0-polynomial/benches/: div.rs
crates/r0-polynomial/src/: div_by_x_minus_z.rs  exec.rs  host_ref.rs  lib.rs  pair_scan.rs
crates/r0-polynomial/tests/: div_smoke.rs
crates/r0-poseidon1/: Cargo.toml  README.md
crates/r0-poseidon1/benches/: poseidon1.rs
crates/r0-poseidon1/src/: constraint.rs  host_ref.rs  lib.rs  mds.rs  partial.rs  permute.rs
crates/r0-poseidon1/tests/: constraint_cube.rs  cubetype_mut_ext_spike.rs  mds.rs  oracle.rs  permute_cube.rs  precompute.rs  witgen_cube.rs
