[workspace]
resolver = "2"
members = [
    "crates/r0-field",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.85"

[workspace.dependencies]
cubecl = { version = "0.9.0", features = ["cpu", "wgpu"] }
cubecl-core = "0.9.0"

# Test oracles only — never a runtime dep.
p3-field = "0.5.2"
p3-baby-bear = "0.5.2"
p3-koala-bear = "0.5.2"

proptest = "1.5"

[profile.dev]
# Field arithmetic relies on wrapping integer math (Montgomery reduction
# via wrapping mul). Overflow checks turn correct algorithms into panics.
# Keeps host-Rust semantics aligned with cube IR semantics, which always
# wraps. C-style arithmetic discipline applies; property tests against
# Plonky3 catch bugs that overflow-checks would have caught.
overflow-checks = false

[profile.release]
lto = "thin"
codegen-units = 1
overflow-checks = false
