[package]
name = "r0-cube"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
# Backend feature flags mirror r0-ntt's pattern. `cuda` is opt-in; on
# hosts without an NVIDIA driver `cargo test --workspace` would fail
# unhelpfully if it were on by default.
default = ["wgpu", "cpu"]
cuda = ["cubecl/cuda"]
wgpu = ["cubecl/wgpu"]
cpu = ["cubecl/cpu"]

[dependencies]
cubecl = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = { workspace = true }
