[package]
name = "r0-cube"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
# No default backend — the user must pick one via `--features cuda` or
# `--features wgpu`. Building without a backend is a compile error.
default = []
# cubecl-cuda 0.9 has an upstream bug where it fails to compile without
# cubecl/cpu present (missing cubecl-runtime stream imports). We pull in
# cpu silently as a workaround — users just pass `--features cuda`.
cuda = ["cubecl/cuda", "cubecl/cpu"]
wgpu = ["cubecl/wgpu"]

[dependencies]
cubecl = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = { workspace = true }
