[package]
name = "r0-field"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
cubecl = { workspace = true }
cubecl-core = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = { workspace = true }

[dev-dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-koala-bear = { workspace = true }
proptest = { workspace = true }
