[package]
name = "r0-field"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
cubecl = { workspace = true }
cubecl-core = { workspace = true }

[dev-dependencies]
r0-cube = { path = "../r0-cube" }
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-koala-bear = { workspace = true }
proptest = { workspace = true }
