[package]
name = "r0-ntt-web"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
r0-ntt = { path = "../r0-ntt", default-features = false, features = ["wgpu", "unstable-planner"] }
r0-field = { path = "../r0-field" }
r0-cube = { path = "../r0-cube" }
cubecl = { workspace = true, default-features = false, features = ["wgpu", "std"] }
cubecl-wgpu = "0.9.0"
cubecl-runtime = "0.9.0"
cubecl-common = { workspace = true, features = ["serde", "std"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Performance", "Document", "Element", "HtmlElement"] }
console_error_panic_hook = "0.1"
web-time = "1.1"

# wasm32-unknown-unknown needs the wasm_js backend explicitly.
getrandom = { version = "0.3", features = ["wasm_js"] }

# cubecl-core depends on serde_json with no features; we have to turn one on
# transitively or it refuses to build.
serde_json = { version = "1", features = ["std"] }
