[package]
name = "r0-ntt"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["cuda", "wgpu", "cpu"]
cuda = ["cubecl/cuda"]
wgpu = ["cubecl/wgpu"]
cpu = ["cubecl/cpu"]

[dependencies]
r0-field = { path = "../r0-field" }
cubecl = { workspace = true }
cubecl-core = { workspace = true }

[dev-dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-koala-bear = { workspace = true }
p3-dft = { workspace = true }
p3-matrix = { workspace = true }
criterion = { workspace = true }
cubecl-common = { workspace = true }
wgpu = "26.0.1"

[[bench]]
name = "ntt"
harness = false
