[package]
name = "r0-ntt"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
cuda = ["r0-cube/cuda"]
wgpu = ["r0-cube/wgpu"]
# Exposes the planner (NttPlan, PassConfig, plan_heuristic, validate_plan,
# enumerate_valid_plans, heuristic_score, DeviceLimits) and the
# explicit-plan executor methods (forward_with_plan, inverse_with_plan,
# limits). Off by default — these surfaces are still in flux and should
# not be relied on by downstream crates.
unstable-planner = []

[dependencies]
r0-cube = { path = "../r0-cube" }
r0-field = { path = "../r0-field" }
cubecl = { workspace = true }
cubecl-core = { workspace = true }

[dev-dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-koala-bear = { workspace = true }
p3-dft = { workspace = true }
p3-matrix = { workspace = true }
criterion = { workspace = true }
cubecl-common = { workspace = true }
wgpu = "26.0.1"

[[bench]]
name = "ntt"
harness = false
