[package]
name = "r0-polynomial"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
# Backend feature flags mirror r0-ntt's pattern. `cuda` is opt-in; on
# hosts without an NVIDIA driver `cargo test --workspace` would fail
# unhelpfully if it were on by default.
default = ["wgpu", "cpu"]
cuda = ["cubecl/cuda", "r0-cube/cuda"]
wgpu = ["cubecl/wgpu", "r0-cube/wgpu"]
cpu = ["cubecl/cpu", "r0-cube/cpu"]

[dependencies]
r0-cube = { path = "../r0-cube" }
r0-field = { path = "../r0-field" }
cubecl = { workspace = true }
cubecl-core = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
cubecl-common = { workspace = true }

[[bench]]
name = "div"
harness = false
