[package]
name = "r0-poseidon1"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
cuda = ["r0-cube/cuda"]
wgpu = ["r0-cube/wgpu"]

[dependencies]
r0-cube = { path = "../r0-cube" }
r0-field = { path = "../r0-field" }
cubecl = { workspace = true }
cubecl-core = { workspace = true }
